fix: Adjust margin-left for certification heading for better alignment

--- a/SCSS/_certification.scss
+++ b/SCSS/_certification.scss
@@ -29,7 +29,7 @@
   }
   h2#heading {
     display: inline-block;
-    margin-left: 32.5vw;
+    margin-left: 35vw;
     font-weight: 900;
     font-size: 2rem;
     padding: 2px 10px;
