--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -2064,7 +2064,7 @@ footer:hover::before {
 }
 .certification h2#heading {
   display: inline-block;
-  margin-left: 32.5vw;
+  margin-left: 35vw;
   font-weight: 900;
   font-size: 2rem;
   padding: 2px 10px;
